# sf2hpp

./: CMakeLists.txt  DynamicPool.hpp  LICENSE  README.md  RIFF.hpp  SoundFont2.hpp  example.cpp  sf2.hpp
.github/workflows/: cmake.yml
